Update final task

--- a/finalProject/src/resources/locale_en.properties
+++ b/finalProject/src/resources/locale_en.properties
@@ -1,5 +1,6 @@
 locale.default.welcome_message = WELCOME
 locale.default.main_page= Main page
+locale.default.menu= Menu
 locale.default.login_message = Login
 locale.default.password_message = Password
 locale.default.registration = Registration
