--- a/finalProject/src/resources/locale_ru.properties
+++ b/finalProject/src/resources/locale_ru.properties
@@ -1,5 +1,6 @@
 locale.default.welcome_message = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C
 locale.default.main_page = \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
+locale.default.menu = \u041c\u0435\u043d\u044e
 locale.default.login_message = \u041B\u043E\u0433\u0438\u043D
 locale.default.password_message = \u041F\u0430\u0440\u043E\u043B\u044C
 locale.default.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f
