Update final project

--- a/finalProject/src/resources/locale_en.properties
+++ b/finalProject/src/resources/locale_en.properties
@@ -1,7 +1,9 @@
 locale.default.welcome_message = WELCOME
 locale.default.main_page= Main page
 locale.default.menu= Menu
+locale.default.order= My order
 locale.default.login_message = Login
+locale.default.logout = Logout
 locale.default.password_message = Password
 locale.default.registration = Registration
 
@@ -14,14 +16,22 @@ locale.login_message = Login
 locale.name_message = Name
 locale.surname_message = Surname
 
+locale.street = Street
+locale.house = House
+locale.flat = flat
+
 locale.dish.name = Name
 locale.dish.description = Description
 locale.dish.weight = Weight
+locale.dish.amount = Amount of dishes
 locale.dish.price = Price
 locale.dish.type = Type
 locale.dish.type.pizza = Pizza
 locale.dish.type.burger = Burger
 locale.dish.type.dessert = Desert
+locale.dish.change = Change
+locale.dish.add_to_order = Add to order
+locale.dish.make_order = Make an order
 
 locale.button.add_dish = Add new dish
 locale.button.submit = Submit
