--- a/finalProject/src/resources/locale_ru.properties
+++ b/finalProject/src/resources/locale_ru.properties
@@ -1,7 +1,9 @@
 locale.default.welcome_message = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C
 locale.default.main_page = \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
 locale.default.menu = \u041c\u0435\u043d\u044e
+locale.default.order= \u041c\u043e\u0439 \u0437\u0430\u043a\u0430\u0437
 locale.default.login_message = \u041B\u043E\u0433\u0438\u043D
+locale.default.logout = \u0412\u044b\u0439\u0442\u0438
 locale.default.password_message = \u041F\u0430\u0440\u043E\u043B\u044C
 locale.default.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f
 
@@ -14,14 +16,22 @@ locale.login_message = \u041b\u043e\u0433\u0438\u043d
 locale.name_message = \u0418\u043c\u044f
 locale.surname_message = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
 
+locale.street = \u0423\u043b\u0438\u0446\u0430
+locale.house = \u0414\u043e\u043c
+locale.flat = \u041a\u0432\u0430\u0440\u0442\u0438\u0440\u0430
+
 locale.dish.name = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
 locale.dish.description = \u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 locale.dish.weight = \u0412\u0435\u0441
+locale.dish.amount = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0431\u043b\u044e\u0434
 locale.dish.price = \u0426\u0435\u043d\u0430
 locale.dish.type = \u0422\u0438\u043f
 locale.dish.type.pizza = \u041f\u0438\u0446\u0446\u0430
 locale.dish.type.burger = \u0411\u0443\u0440\u0433\u0435\u0440
 locale.dish.type.dessert = \u0414\u0435\u0441\u0435\u0440\u0442
+locale.dish.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
+locale.dish.add_to_order = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043a \u0437\u0430\u043a\u0430\u0437\u0443
+locale.dish.make_order = \u0421\u0434\u0435\u043b\u0430\u0442\u044c \u0437\u0430\u043a\u0430\u0437
 
 locale.button.add_dish = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0431\u043b\u044e\u0434\u043e
 locale.button.submit = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
