Repairing some parts

--- a/finalProject/src/resources/locale_en.properties
+++ b/finalProject/src/resources/locale_en.properties
@@ -1,7 +1,7 @@
-locale.default.welcome_message = WELCOME
 locale.default.main_page= Main page
 locale.default.menu= Menu
 locale.default.order= My order
+locale.default.history= Order's history
 locale.default.login_message = Login
 locale.default.logout = Logout
 locale.default.password_message = Password
@@ -16,6 +16,7 @@ locale.login_message = Login
 locale.name_message = Name
 locale.surname_message = Surname
 
+
 locale.street = Street
 locale.house = House
 locale.flat = flat
@@ -29,9 +30,14 @@ locale.dish.type = Type
 locale.dish.type.pizza = Pizza
 locale.dish.type.burger = Burger
 locale.dish.type.dessert = Desert
-locale.dish.change = Change
 locale.dish.add_to_order = Add to order
 locale.dish.make_order = Make an order
 
+locale.order.date = Date
+locale.order.dishes = Dishes
+locale.order.empty = You have not chosen anything
+
 locale.button.add_dish = Add new dish
+locale.button.change = Change
+locale.button.delete = Delete
 locale.button.submit = Submit
