--- a/finalProject/src/resources/locale_ru.properties
+++ b/finalProject/src/resources/locale_ru.properties
@@ -2,6 +2,7 @@ locale.default.welcome_message = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u04
 locale.default.main_page = \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
 locale.default.menu = \u041c\u0435\u043d\u044e
 locale.default.order= \u041c\u043e\u0439 \u0437\u0430\u043a\u0430\u0437
+locale.default.history= \u0418\u0441\u0442\u043e\u0440\u0438\u044f \u0437\u0430\u043a\u0430\u0437\u043e\u0432
 locale.default.login_message = \u041B\u043E\u0433\u0438\u043D
 locale.default.logout = \u0412\u044b\u0439\u0442\u0438
 locale.default.password_message = \u041F\u0430\u0440\u043E\u043B\u044C
@@ -29,10 +30,15 @@ locale.dish.type = \u0422\u0438\u043f
 locale.dish.type.pizza = \u041f\u0438\u0446\u0446\u0430
 locale.dish.type.burger = \u0411\u0443\u0440\u0433\u0435\u0440
 locale.dish.type.dessert = \u0414\u0435\u0441\u0435\u0440\u0442
-locale.dish.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
 locale.dish.add_to_order = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043a \u0437\u0430\u043a\u0430\u0437\u0443
 locale.dish.make_order = \u0421\u0434\u0435\u043b\u0430\u0442\u044c \u0437\u0430\u043a\u0430\u0437
 
+locale.order.date = \u0414\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f
+locale.order.dishes = \u0411\u043b\u044e\u0434\u0430
+locale.order.empty = \u0412\u044b \u043d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u0437\u0430\u043a\u0430\u0437\u0430\u043b\u0438
+
 locale.button.add_dish = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0431\u043b\u044e\u0434\u043e
+locale.button.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
+locale.button.delete = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
 locale.button.submit = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
 
