--- a/finalProject/src/resources/locale_en.properties
+++ b/finalProject/src/resources/locale_en.properties
@@ -6,6 +6,9 @@ locale.default.login_message = Login
 locale.default.logout = Logout
 locale.default.password_message = Password
 locale.default.registration = Registration
+locale.default.add-dish=Add dish
+locale.default.edit-dish=Edit dish
+locale.default.dish = Your dish
 
 locale.default.locale_button.en = en
 locale.default.locale_button.ru = rus
@@ -41,3 +44,5 @@ locale.button.add_dish = Add new dish
 locale.button.change = Change
 locale.button.delete = Delete
 locale.button.submit = Submit
+
+message.wrong-access=You can not access the requested page
